# doom-clone

./: .gitignore  Cargo.toml  README.md  build-clang.bat  build-linux.sh  build-macos.sh  build-x86-clang.bat  build-x86.bat  build.bat  doom  doom.c
src/: audio.rs  bot.rs  color.rs  constants.rs  entity.rs  game.rs  hud.rs  level.rs  main.rs  render.rs  selftest.rs  sprites.rs  textures.rs  types.rs
