[package]
name = "doom-clone"
version = "0.1.0"
edition = "2021"
description = "A DOOM-style raycasting FPS written in Rust"

[[bin]]
name = "doom"
path = "src/main.rs"

[dependencies]
# x11-only: avoids minifb's Wayland deps (tempfile -> getrandom 0.4, which needs
# the edition2024 cargo feature / a very recent toolchain). X11/XWayland covers
# Linux + WSLg; Windows/macOS backends are unaffected.
minifb = { version = "0.27", default-features = false, features = ["x11"] }

[profile.release]
opt-level = 3
lto = true
